--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
       - 
         name: Publish Action
-        uses: icg-software/docker-push-action@v0.4.2
+        uses: icg-software/docker-push-action@latest
         with:
           repoOwner: ${{ github.repository_owner }}
           githubUser: ${{ github.actor }}
